--- a/Bonfire/appsettings.json
+++ b/Bonfire/appsettings.json
@@ -1,3 +1,9 @@
 {
-
+  "Database": {
+    "Type": "SQLite",
+    "ConnectionStrings": {
+      "SQLite": "Data Source=BonfireDB.db"
+      
+    }
+  }
 }
