--- a/Bonfire/Bonfire.csproj
+++ b/Bonfire/Bonfire.csproj
@@ -28,4 +28,10 @@
     <ProjectReference Include="..\BonfireDB\BonfireDB.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="appsettings.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
