Реализовано поведение кнопки Enter для ComboBox как кнопки Tab

--- a/Bonfire/Bonfire.csproj
+++ b/Bonfire/Bonfire.csproj
@@ -29,6 +29,7 @@
 
   <ItemGroup>
     <PackageReference Include="FontAwesome5" Version="2.1.11" />
+    <PackageReference Include="GSF.Core" Version="2.4.28" />
     <PackageReference Include="MathCore.WPF" Version="0.0.44.4" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite.Core" Version="7.0.3" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="7.0.3">
