Добавлен функционал формирования отчета о семенах

--- a/Bonfire/Bonfire.csproj
+++ b/Bonfire/Bonfire.csproj
@@ -28,6 +28,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="EPPlus" Version="7.0.5" />
     <PackageReference Include="FontAwesome5" Version="2.1.11" />
     <PackageReference Include="GSF.Core" Version="2.4.28" />
     <PackageReference Include="MathCore.WPF" Version="0.0.44.4" />
